# draughts-nn

./: README.md  chellapilla_fogel.py  draughts-nn.ipynb  pyproject.toml
